using UnityEngine;

public class Constants
{
    public class CharatorAnimation
    {
        public static int Die = Animator.StringToHash("Die");
        public static int Attack = Animator.StringToHash("Attack");
        public static int Awake = Animator.StringToHash("Awake");

        public static int Shoot = Animator.StringToHash("Shoot");

        public static int Fire = Animator.StringToHash("Fire");
        public static int Reload = Animator.StringToHash("Reload");
    }

}